--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -10,10 +10,13 @@
   <body>
     <a-scene background="color: #333333">
       <a-box id="myBox"
-        width="3"
-        height="2"
-        depth="1"
+        width="4"
+        height="4"
+        depth="4"
         color="#BBAA33" 
+        position= "-1 3 1"
+        rotation= "0.5 2 1"
+        scale = "1 1 1"
         shadow>
       </a-box>
     </a-scene>
